--- a/index.html
+++ b/index.html
@@ -20,12 +20,43 @@
             Mesafe: <input type="text" id="mesafe"><br><br>
             Suret(km/saat) <input type="text" id="suret"><br><br>
           </p>
-          <a href="#" class="btn btn-primary result">Go somewhere</a>
+          <a href="#" class="btn btn-primary result">Result</a>
           <h5 id="netice"></h5>
         </div>
       </div>
 
+      <hr>
+
+      <div class="card tt">
+        <div class="card-header">
+          Convert
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Convert AZN</h5>
+          <p class="card-text">
+            Manat(AZN): <input type="text" id="manat"><br><br>
+          </p>
+
+          <nav href="#">
+      <button class="dollar btn btn-primary">Dollar</button>
+
+      <button class="euro btn btn-primary">Euro</button>
+
+      <button class="lira btn btn-primary">Lira</button>
+
+      <button class="rubl btn btn-primary">Rubl</button>
+          </nav>
+
+          <h5 id="result2"></h5>
+        </div>
+      </div>
+
+
+
+      <!-- dollarResult euroResult liraResult rublResult -->
+
     <script src="script.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
