--- a/index.html
+++ b/index.html
@@ -1,62 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Project</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <title>Project</title>
 </head>
+
 <body>
-    <div class="card">
-        <div class="card-header ">
-            Yol
-        </div>
-        <div class="card-body">
-          <h5 class="card-title mx-auto">Haradan-haraya:</h5><br>
-          <p class="card-text ">
-            Haradan: <input type="text" id="haradan"><br><br>
-            Haraya: <input type="text" id="haraya"><br><br>
-            Mesafe: <input type="text" id="mesafe"><br><br>
-            Suret(km/saat) <input type="text" id="suret"><br><br>
-          </p>
-          <a href="#" class="btn btn-primary result">Result</a>
-          <h5 id="netice"></h5>
-        </div>
-      </div>
+  <header class="header">Header</header>
 
-      <hr>
+  <div class="card">
+    <div class="card-header ">
+      Yol
+    </div>
+    <div class="card-body">
+      <h5 class="card-title mx-auto">Haradan-haraya:</h5><br>
+      <p class="card-text ">
+        Haradan: <input type="text" id="haradan"><br><br>
+        Haraya: <input type="text" id="haraya"><br><br>
+        Mesafe: <input type="text" id="mesafe"><br><br>
+        Suret(km/saat) <input type="text" id="suret"><br><br>
+      </p>
+      <a href="#" class="btn btn-primary result">Result</a>
+      <h5 id="netice"></h5>
+    </div>
+  </div>
 
-      <div class="card tt">
-        <div class="card-header">
-          Convert
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Convert AZN</h5>
-          <p class="card-text">
-            Manat(AZN): <input type="text" id="manat"><br><br>
-          </p>
+  <hr>
 
-          <nav href="#">
-      <button class="dollar btn btn-primary">Dollar</button>
+  <div class="card">
+    <div class="card-header">
+      Convert
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Convert AZN</h5>
+      <p class="card-text">
+        Manat(AZN): <input type="text" id="manat"><br><br>
+      </p>
 
-      <button class="euro btn btn-primary">Euro</button>
+      <nav href="#">
+        <button class="dollar btn btn-primary">Dollar</button>
 
-      <button class="lira btn btn-primary">Lira</button>
+        <button class="euro btn btn-primary">Euro</button>
 
-      <button class="rubl btn btn-primary">Rubl</button>
-          </nav>
+        <button class="lira btn btn-primary">Lira</button>
 
-          <h5 id="result2"></h5>
-        </div>
-      </div>
+        <button class="rubl btn btn-primary">Rubl</button>
+      </nav>
 
+      <h5 id="result2"></h5>
+    </div>
+  </div>
 
+  <hr>
 
-      <!-- dollarResult euroResult liraResult rublResult -->
+  <div class="card a">
+    <div class="card-header">
+      Calculator
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Calculator</h5>
+      <p class="card-text">
+        Reqem 1: <input type="text" id="reqem1"><br><br>
+        Reqem 2: <input type="text" id="reqem2"><br><br>
+      </p>
+      <nav href="#" class="">  
+        <button class="toplama btn btn-primary">Toplama(+)</button>
+        <button class="cixma btn btn-primary">Cixma(-)</button>
+        <button class="vurma btn btn-primary">Vurma(*)</button>
+        <button class="bolme btn btn-primary">Bolme(/)</button></nav>
+    </div>
+    <h5 id="result3"></h5>
+  </div>
 
-    <script src="script.js"></script>
+  <footer class="footer">Design by Mitri &copy; 2024</footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
