--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         Reqem 2: <input type="text" id="reqem2"><br><br>
       </p>
       <nav href="#" class="">  
-        <button class="toplama btn btn-primary">Toplama(+)</button>
-        <button class="cixma btn btn-primary">Cixma(-)</button>
-        <button class="vurma btn btn-primary">Vurma(*)</button>
-        <button class="bolme btn btn-primary">Bolme(/)</button></nav>
+        <button class="toplama btn btn-primary b">Toplama(+)</button>
+        <button class="cixma btn btn-primary b">Cixma(-)</button>
+        <button class="vurma btn btn-primary b">Vurma(*)</button>
+        <button class="bolme btn btn-primary b">Bolme(/)</button></nav>
     </div>
     <h5 id="result3"></h5>
   </div>
