--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="card-body">
       <h5 class="card-title mx-auto">Haradan-haraya:</h5><br>
       <p class="card-text ">
-        Haradan: <input type="text" id="haradan"><br><br>
-        Haraya: <input type="text" id="haraya"><br><br>
-        Mesafe: <input type="text" id="mesafe"><br><br>
-        Suret(km/saat) <input type="text" id="suret"><br><br>
+        Haradan: <input type="text" id="haradan" required><br><br>
+        Haraya: <input type="text" id="haraya" required><br><br>
+        Mesafe: <input type="text" id="mesafe" required><br><br>
+        Suret(km/saat) <input type="text" id="suret" required><br><br>
       </p>
       <a href="#" class="btn btn-primary result">Result</a>
       <h5 id="netice"></h5>
@@ -39,7 +39,7 @@
     <div class="card-body">
       <h5 class="card-title">Convert AZN</h5>
       <p class="card-text">
-        Manat(AZN): <input type="text" id="manat"><br><br>
+        Manat(AZN): <input type="text" id="manat" required><br><br>
       </p>
 
       <nav href="#">
@@ -65,8 +65,8 @@
     <div class="card-body">
       <h5 class="card-title">Calculator</h5>
       <p class="card-text">
-        Reqem 1: <input type="text" id="reqem1"><br><br>
-        Reqem 2: <input type="text" id="reqem2"><br><br>
+        Reqem 1: <input type="text" id="reqem1" required><br><br>
+        Reqem 2: <input type="text" id="reqem2" required><br><br>
       </p>
       <nav href="#" class="">  
         <button class="toplama btn btn-primary b">Toplama(+)</button>
